k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mautic-unsubscribe-proxy
  namespace: ${DEPLOY_NAMESPACE}
  labels:
    app.kubernetes.io/name: mautic-unsubscribe-proxy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mautic-unsubscribe-proxy
